@startuml

title __WISHGEN's Class Diagram__\n

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace wishgen {
        class ru.omegapps.wisherapp.fragments.wishgen.AdresseeConfigFragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - addresseeName : EditText
            - mParam1 : String
            - mParam2 : String
            - nextStepButton : Button
            - randomGenButton : Button
            - setTagButton : Button
            - sex : String
            - sexRadioGroup : RadioGroup
            - tagGroup : TagGroup
            - tagList : List<String>
            - tagText : EditText
            + AdresseeConfigFragment()
            + hideKeyboard()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace wishgen {
        class ru.omegapps.wisherapp.fragments.wishgen.BeginSetupFragment {
            ~ chosenIndexes : ArrayList<Integer>
            ~ nextStepButton : Button
            ~ recyclerView : RecyclerView
            ~ wishBlocks : ArrayList<WishBlock>
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            {static} - STEP_NAME : String
            - mParam1 : String
            - mParam2 : String
            + BeginSetupFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            + onMyItemClick()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace wishgen {
        class ru.omegapps.wisherapp.fragments.wishgen.EndSetupFragment {
            ~ chosenIndexes : ArrayList<Integer>
            ~ nextStepButton : Button
            ~ recyclerView : RecyclerView
            ~ wishBlocks : ArrayList<WishBlock>
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            {static} - STEP_NAME : String
            + EndSetupFragment()
            + onCreate()
            + onCreateView()
            + onMyItemClick()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace wishgen {
        class ru.omegapps.wisherapp.fragments.wishgen.MiddleSetupFragment {
            ~ chosenIndexes : ArrayList<Integer>
            ~ nextStepButton : Button
            ~ recyclerView : RecyclerView
            ~ wishBlocks : ArrayList<WishBlock>
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            {static} - STEP_NAME : String
            - mParam1 : String
            - mParam2 : String
            + MiddleSetupFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            + onMyItemClick()
        }
      }
    }
  }
  

  namespace ru.omegapps.wisherapp {
    namespace fragments {
      namespace wishgen {
        class ru.omegapps.wisherapp.fragments.wishgen.WishGenSessionEndFragment {
            {static} - WISH_TEXT : String
            - mWishText : String
            + WishGenSessionEndFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  ru.omegapps.wisherapp.fragments.wishgen.AdresseeConfigFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.wishgen.BeginSetupFragment .up.|> ru.omegapps.wisherapp.interfaces.OnMyItemClickListener
  ru.omegapps.wisherapp.fragments.wishgen.BeginSetupFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.wishgen.EndSetupFragment .up.|> ru.omegapps.wisherapp.interfaces.OnMyItemClickListener
  ru.omegapps.wisherapp.fragments.wishgen.EndSetupFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.wishgen.MiddleSetupFragment .up.|> ru.omegapps.wisherapp.interfaces.OnMyItemClickListener
  ru.omegapps.wisherapp.fragments.wishgen.MiddleSetupFragment -up-|> androidx.fragment.app.Fragment
  ru.omegapps.wisherapp.fragments.wishgen.WishGenSessionEndFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
